🛠FIX: Performance issues
1. Image not having defined height in html
2. Flash of invisible text (FOIT)

--- a/components/banner/styles.module.scss
+++ b/components/banner/styles.module.scss
@@ -153,8 +153,6 @@
             }
 
             img {
-                width: 15vw;
-                max-width: 6rem;
                 animation: bounce 1.5s ease-in-out infinite;
             }
 
